fixed alignment in invoice attachments

--- a/client/frontend/src/less/frontend/icons.less
+++ b/client/frontend/src/less/frontend/icons.less
@@ -172,7 +172,7 @@
   &:after { content: "\e024"; }
 }
 
-.pColdBev {
+.pBeverage {
   &:before { content: "\e02e"; }
   &:after { content: "\e02f"; }
 }
